# SecureAgent

./: .gitignore  README.md
.github/workflows/: test.yml
SecureAgent/: README.md  SECURITY.md
SecureAgent/src/SecureAgent/: exceptions.py
agentic-security/: LICENSE  README.md  SECURITY.md  pyproject.toml
agentic-security/.github/workflows/: test.yml
agentic-security/src/SecureAgent/: core.py  exchange.py
agentic-security/src/agentic_security/: registration.py
agentic-security/tests/: conftest.py  test_registration.py
poc/: README.md  check_health.py  check_providers.py  debug_user.py  docker-compose.yml  fix_and_debug_user.py  fix_testuser.py  grant_exchange.py  grant_exchange_v2.py  grant_exchange_v3.py  keycloak_setup.py  orchestrator.py  recreate_testuser.py  requirements.txt  setup_poc.py  specialist_agent.py  test_module.py  verify_experiment.py  verify_package.py
